--- a/ui.html
+++ b/ui.html
@@ -40,8 +40,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/w6htapdmia6u6qajx4nfue7ayh'>UI Engineer I  | Current Openings</a></h5> 
+<p><span class="badge badge-light">Menlo Park, CA  Menlo Park, CA</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/soroco/jobs/1939115'>Job Application for UI UX Designer at Soroco</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qeGaVfwJ&k=Job&j=oU5l9fwd&__jvst=Employee&__jvsd=s3HYhiwM&__jvsc=Twitter&bid=nHCRoMwP'> Splash Damage Careers - UI Programmer</a></h5> 
@@ -80,7 +84,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/pharmacy-technician-certified-5632'>Pharmacy Technician, Certified - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/pharmacy-technician-certified-5632'>Pharmacy Technician, Certified - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -112,11 +116,11 @@
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/5636/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5636/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/5637/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5637/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -172,7 +176,7 @@
 <p><span class="badge badge-light">Hyderabad, India</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/arundoanalytics/jobs/1893493'>Job Application for Product Designer (UI/UX) at Arundo Analytics</a></h5> 
+<h5><a href='https://boards.greenhouse.io/arundoanalytics/jobs/1893493'>Job Application for Product Designer (UI/UX) at Arundo Analytics</a></h5> 
 <p><span class="badge badge-light">Oslo, Norway  Oslo, Norway Houston, TXPalo Alto, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -264,7 +268,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://euraxess.ec.europa.eu/jobs/458313'>Postdoctoral in the field of natural sciences, field of biology, to work on HRZZ NZZ establishment project UIP-2017-05-5635 "Microbiome of loggerhead turtle (Caretta caretta): insight into episodic and endozoic communities (TurtleBIOME)" | EURAXESS</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://euraxess.ec.europa.eu/jobs/458313'>Postdoctoral in the field of natural sciences, field of biology, to work on HRZZ NZZ establishment project UIP-2017-05-5635 "Microbiome of loggerhead turtle (Caretta caretta): insight into episodic and endozoic communities (TurtleBIOME)" | EURAXESS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -350,11 +354,11 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oJqkbfwo&__jvst=Employee+Referral&__jvsd=s2yligwY&__jvsc=Twitter&bid=nmTEmMww'>Jobvite, Inc. Careers - UI Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oJqkbfwo&__jvst=Employee+Referral&__jvsd=s2yligwY&__jvsc=Twitter&bid=nmTEmMww'>Jobvite, Inc. Careers - UI Developer</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24958-Designer-VUI-UX?source=twitter'>
+<h5><a href='https://dribbble.com/jobs/24958-Designer-VUI-UX?source=twitter'>
       Designer VUI/UX at New York Public Radio - Anywhere - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">New York</span></p>
@@ -364,7 +368,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://recruit.apo.ucla.edu/JPF05081'>Postdoctoral Scholar in Uterine Cancers - UCLA G.O. Discovery Laboratory (JPF05081) - UCLA Academic RECRUIT</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.apo.ucla.edu/JPF05081'>Postdoctoral Scholar in Uterine Cancers - UCLA G.O. Discovery Laboratory (JPF05081) - UCLA Academic RECRUIT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -458,14 +462,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://www.42jobs.io/react/jobs/8425-senior-ui-engineer'>
-Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 
-</a></h5> 
-<p><span class="badge badge-light">London London</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
