--- a/biostatistics.html
+++ b/biostatistics.html
@@ -122,7 +122,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p>12 hours ago ... Experience of collaborative research (including creating and maintaining data 
 files, writing application programs within a statistical software, analyzing data,?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistician-4603'>Biostatistician - PPD Careers</a></h5> 
+<h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistician-4603'>Biostatistician - PPD Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -135,7 +135,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Barcelona, Catalonia, Spain</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/acadiapharmaceuticals/jobs/4442490002'>Job Application for Temporary Biostatistician at ACADIA Pharmaceuticals</a></h5> 
+<h5><a href='https://boards.greenhouse.io/acadiapharmaceuticals/jobs/4442490002'>Job Application for Temporary Biostatistician at ACADIA Pharmaceuticals</a></h5> 
 <p><span class="badge badge-light">San Diego, California United States</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -171,7 +171,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-02</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/premier-research/job/oQzfbfwz'>Premier Research Careers - Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/oQzfbfwz'>Premier Research Careers - Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
@@ -257,7 +257,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Darmstadt, Germany</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oOrAafwJ'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/premier-research/job/oOrAafwJ'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
@@ -295,7 +295,7 @@ files, writing application programs within a statistical software, analyzing dat
 midline and endline quantitative data collection points. The primary outcomes of
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ergomed/743999691394798-biostatistician'>Ergomed Biostatistician | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ergomed/743999691394798-biostatistician'>Ergomed Biostatistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">K?ln, Germany</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
@@ -347,7 +347,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oBrAafww&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=naQ8sLwQ'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oBrAafww&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=naQ8sLwQ'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">Sofia, Bulgaria</span></p>
 <p>Posted on:: 2019-09-01</p>
 <hr/>
@@ -359,11 +359,11 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">North Carolina  Boston, Massachusetts  Chicago, Illinois  Denver Phoenix, Arizona  San Diego, California  San Francisco, California  Seattle, Washington  Salt Lake City, Utah  Austin, Texas  Naperville, Illinois  Baltimore, Maryland  Nashville, Tennessee</span></p>
 <p>Posted on:: 2019-08-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/43953B5F23'>Statistics & Data Corporation (SDC) - Jobs: Principal Biostatistician - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/43953B5F23'>Statistics & Data Corporation (SDC) - Jobs: Principal Biostatistician - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-30</p>
 <hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/A7FB00C739'>Statistics & Data Corporation (SDC) - Jobs: Senior Biostatistician - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/A7FB00C739'>Statistics & Data Corporation (SDC) - Jobs: Senior Biostatistician - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-30</p>
 <hr/>
@@ -404,7 +404,7 @@ of the Biostatistics department in the R&D Development organisation.</p>
 <p><span class="badge badge-light">South San Francisco, California</span></p>
 <p>Posted on: 2019-08-21</p>
 <hr/>
-<h5><a href='https://sensient.referrals.selectminds.com/jobs/microbiology-lab-tech-united-states-natural-ingredients-n-america-3901'>Microbiology Lab Tech, United States, Natural Ingredients N. America - Sensient Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sensient.referrals.selectminds.com/jobs/microbiology-lab-tech-united-states-natural-ingredients-n-america-3901'>Microbiology Lab Tech, United States, Natural Ingredients N. America - Sensient Careers</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-08-20</p>
 <hr/>
@@ -421,7 +421,7 @@ of the Biostatistics department in the R&D Development organisation.</p>
 <p>Aug 8, 2019 ... Serves as an independent reporting statistician on data monitoring committees. 
 Develops statistical analysis plans and reporting specifications for simple to?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://glpg.recruitee.com/o/biostatistics-leader-be-nl-fr-or-ch'>
+<h5><a href='https://glpg.recruitee.com/o/biostatistics-leader-be-nl-fr-or-ch'>
       Biostatistics Leader -  BE, NL, FR or CH - Galapagos
     </a></h5> 
 <p><span class="badge badge-light">France</span></p>
@@ -443,7 +443,7 @@ Review all of the job details and apply today!</p>
 <p>Jul 29, 2019 ... ... of methodology; Develop predictive capabilities for Alkahest's scientific areas 
 of focus, using the appropriate statistical and machine learning methodologies?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FivePrimeTherapeutics/743999692690623-director-biostatistics'>FivePrime Therapeutics Director, Biostatistics | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FivePrimeTherapeutics/743999692690623-director-biostatistics'>FivePrime Therapeutics Director, Biostatistics | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">South San Francisco, CA</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
