--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/slang/c424cc92-a6b4-4660-966e-3396da1bd766'>Slang - Engineering Intern</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://sygnum.join.com/jobs/471534-full-stack-developer-intern-3-month-internship'>Job @ Sygnum (Z?rich): Full-Stack Developer Intern... | JOIN</a></h5> 
+<p><span class="badge badge-light">Z?rich, Switzerland</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/samsungssi/job/oI6sbfwb'>Samsung Semiconductor, Inc. Careers - Memory Architecture Research Intern</a></h5> 
+<p><span class="badge badge-light">San Jose, California</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=opK89fwa&__jvst=Employee+Referral&__jvsd=svdfVgwD&__jvsc=Twitter&bid=nJsQoMwG'>Palo Alto Networks Careers - Intern - Cloud Software Engineer</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-30</p>
@@ -85,7 +97,7 @@
 <p><span class="badge badge-light">Baltimore, Maryland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://burnsmcdonn.referrals.selectminds.com/BURNSMCDONNP.M5R3'>Computer Science/Engineering Internship - Burns &amp; McDonnell Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://burnsmcdonn.referrals.selectminds.com/BURNSMCDONNP.M5R3'>Computer Science/Engineering Internship - Burns &amp; McDonnell Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -125,7 +137,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698505432-intern-thermal-systems-engineering-summer-2020'>Bosch Group Intern: Thermal Systems Engineering - Summer 2020 | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698505432-intern-thermal-systems-engineering-summer-2020'>Bosch Group Intern: Thermal Systems Engineering - Summer 2020 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -169,7 +181,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nomoko.join.com/jobs/470090-3d-artist-internship'>Job @ Nomoko (Z?rich): 3D Artist Internship | JOIN</a></h5> 
+<h5><a href='https://nomoko.join.com/jobs/470090-3d-artist-internship'>Job @ Nomoko (Z?rich): 3D Artist Internship | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -281,7 +293,7 @@
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://carrypicker.join.com/jobs/468339-sales-und-growth-intern-m-w-d'>Job @ Carrypicker (Hamburg): Sales & Growth Intern... | JOIN</a></h5> 
+<h5><a href='https://carrypicker.join.com/jobs/468339-sales-und-growth-intern-m-w-d'>Job @ Carrypicker (Hamburg): Sales & Growth Intern... | JOIN</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg, Deutschland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -339,7 +351,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://itron.referrals.selectminds.com/jobs/front-end-software-engineer-intern-3015'>Front-end Software Engineer Intern - Itron Careers</a></h5> 
+<h5><a href='https://itron.referrals.selectminds.com/jobs/front-end-software-engineer-intern-3015'>Front-end Software Engineer Intern - Itron Careers</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -395,7 +407,7 @@
 <p><span class="badge badge-light">Melbourne Australia  Australia Canberra Melbourne</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.greatinsurancejobs.com/job/6409300/business-intelligence-intern-big-/?TrackID=97736'>Business Intelligence Intern (BIG) job with Travelers Insurance | 6409300</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.greatinsurancejobs.com/job/6409300/business-intelligence-intern-big-/?TrackID=97736'>Business Intelligence Intern (BIG) job with Travelers Insurance | 6409300</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -423,7 +435,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o3K89fwO&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nQr6nMw1'>Palo Alto Networks Careers - Intern - Code Quality Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o3K89fwO&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nQr6nMw1'>Palo Alto Networks Careers - Intern - Code Quality Engineer</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -453,18 +465,6 @@
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=onK89fw8&__jvst=Employee+Referral&__jvsd=svdfVgwD&__jvsc=Twitter&bid=n3G4nMwr'>Palo Alto Networks Careers - Intern - Prisma Access Software Automation Test Engineer</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://nike.referrals.selectminds.com/jobs/footwear-product-testing-internship-53197'>Footwear Product Testing Internship - NIKE, Inc. Careers</a></h5> 
-<p><span class="badge badge-light">United States</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://towerswatson.referrals.selectminds.com/jobs/retirement-actuarial-internship-summer-2020-12021'>Retirement Actuarial Internship (Summer 2020) - Willis Towers Watson Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://www.greatinsurancejobs.com/job/6409294/fire-investigative-intern/?TrackID=97736'>Fire Investigative Intern job with Travelers Insurance | 6409294</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 
